# ash

./: .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  grub.cfg  kernel.c  linker.ld  main.cpp
.github/workflows/: build.yml
boot/: boot.s  entry.s
include/: kernel.h
kernel/: kernel.c
src/: main.cpp
tests/: test_parser.cpp
